--- a/src/gex-viewer.html
+++ b/src/gex-viewer.html
@@ -303,6 +303,10 @@
               color-lut="{{colorLut0}}"
               cursor="{{cursor}}"
               histogram="{{histogram0}}"
+              localizer="{{l0}}"
+              localizer0="{{l1}}"
+              localizer1="{{l2}}"
+              localizer2="{{l3}}"
               min-max="{{minMax0}}"
               orientation="{{orientation0}}"
               window-center="{{windowCenter0}}"
@@ -324,6 +328,10 @@
               color-lut="{{colorLut1}}"
               cursor="{{cursor}}"
               histogram="{{histogram1}}"
+              localizer="{{l1}}"
+              localizer0="{{l0}}"
+              localizer1="{{l2}}"
+              localizer2="{{l3}}"
               min-max="{{minMax1}}"
               orientation="{{orientation1}}"
               window-center="{{windowCenter1}}"
@@ -345,6 +353,10 @@
               color-lut="{{colorLut2}}"
               cursor="{{cursor}}"
               histogram="{{histogram2}}"
+              localizer="{{l2}}"
+              localizer0="{{l0}}"
+              localizer1="{{l1}}"
+              localizer2="{{l3}}"
               min-max="{{minMax2}}"
               orientation="{{orientation2}}"
               window-center="{{windowCenter2}}"
@@ -366,6 +378,10 @@
               color-lut="{{colorLut3}}"
               cursor="{{cursor}}"
               histogram="{{histogram3}}"
+              localizer="{{l3}}"
+              localizer0="{{l0}}"
+              localizer1="{{l1}}"
+              localizer2="{{l2}}"
               min-max="{{minMax3}}"
               orientation="{{orientation3}}"
               window-center="{{windowCenter3}}"
@@ -539,6 +555,10 @@
             type: Number,
             value: 0,
             observer: '_layoutSizeChanged',
+          },
+          cacheLayout: {
+            type: Array,
+            value: [-1, -1, -1, -1],
           },
           currentLayout: {
             type: Array,
@@ -757,7 +777,6 @@
        */
       _onDrop(event) {
         event.preventDefault();
-        console.log(event.dataTransfer.getData("text"));
         //
         event.target.drag = false;
         // alway load same data for now
@@ -768,31 +787,31 @@
           '36747360', '36747374', '36747388', '36747402', '36747416', '36747430',
           '36747444', '36747458', '36747472', '36747486', '36747500', '36747514',
           '36747528', '36747542', '36747556', '36747570', '36747584', '36747598',
-          '36747612', '36747626', '36747640', '36747654', '36747668', '36747682',
-          '36747696', '36747710', '36747724', '36747738', '36747752', '36747766',
-          '36747780', '36747794', '36747808', '36747822', '36747836', '36747850',
-          '36747864', '36747878', '36747892', '36747906', '36747920', '36747934',
-          '36747948', '36747962', '36747976', '36747990', '36748004', '36748018',
-          '36748032', '36748046', '36748060', '36748074', '36748088', '36748102',
-          '36748116', '36748130', '36748144', '36748158', '36748172', '36748186',
-          '36748578', '36748592',
-          '36748606', '36748620', '36748634', '36748648', '36748662', '36748676',
-          '36748690', '36748704', '36748718', '36748732', '36748746', '36748760',
-          '36748774', '36748788', '36748802', '36748816', '36748830', '36748844',
-          '36748858', '36748872', '36748886', '36748900', '36748914', '36748928',
-          '36748942', '36748956', '36748970', '36748984', '36748998', '36749012',
-          '36749026', '36749040', '36749054', '36749068', '36749082', '36749096',
-          '36749110', '36749124', '36749138', '36749152', '36749166', '36749180',
-          '36749194', '36749208', '36749222', '36749236', '36749250', '36749264',
-          '36749278', '36749292', '36749306', '36749320', '36749334', '36749348',
-          '36749362', '36749376', '36749390', '36749404', '36749418',
-          '36749446', '36749460', '36749474', '36749488', '36749502', '36749516',
-          '36749530', '36749544', '36749558', '36749572', '36749586', '36749600',
-          '36749614', '36749628', '36749642', '36749656', '36749670', '36749684',
-          '36749698', '36749712', '36749726', '36749740', '36749754', '36749768',
-          '36749782', '36749796', '36749810', '36749824', '36749838', '36749852',
-          '36749866', '36749880', '36749894', '36749908', '36749922', '36749936',
-          '36749950', '36749964',
+          // '36747612', '36747626', '36747640', '36747654', '36747668', '36747682',
+          // '36747696', '36747710', '36747724', '36747738', '36747752', '36747766',
+          // '36747780', '36747794', '36747808', '36747822', '36747836', '36747850',
+          // '36747864', '36747878', '36747892', '36747906', '36747920', '36747934',
+          // '36747948', '36747962', '36747976', '36747990', '36748004', '36748018',
+          // '36748032', '36748046', '36748060', '36748074', '36748088', '36748102',
+          // '36748116', '36748130', '36748144', '36748158', '36748172', '36748186',
+          // '36748578', '36748592',
+          // '36748606', '36748620', '36748634', '36748648', '36748662', '36748676',
+          // '36748690', '36748704', '36748718', '36748732', '36748746', '36748760',
+          // '36748774', '36748788', '36748802', '36748816', '36748830', '36748844',
+          // '36748858', '36748872', '36748886', '36748900', '36748914', '36748928',
+          // '36748942', '36748956', '36748970', '36748984', '36748998', '36749012',
+          // '36749026', '36749040', '36749054', '36749068', '36749082', '36749096',
+          // '36749110', '36749124', '36749138', '36749152', '36749166', '36749180',
+          // '36749194', '36749208', '36749222', '36749236', '36749250', '36749264',
+          // '36749278', '36749292', '36749306', '36749320', '36749334', '36749348',
+          // '36749362', '36749376', '36749390', '36749404', '36749418',
+          // '36749446', '36749460', '36749474', '36749488', '36749502', '36749516',
+          // '36749530', '36749544', '36749558', '36749572', '36749586', '36749600',
+          // '36749614', '36749628', '36749642', '36749656', '36749670', '36749684',
+          // '36749698', '36749712', '36749726', '36749740', '36749754', '36749768',
+          // '36749782', '36749796', '36749810', '36749824', '36749838', '36749852',
+          // '36749866', '36749880', '36749894', '36749908', '36749922', '36749936',
+          // '36749950', '36749964',
         ];
 
         const images = t1.map(function(v) {
@@ -802,8 +821,6 @@
         // const targetViewerUID = event.target.dataset.uid;
         const targetViewer = event.target;
         this.set(['currentLayout', targetViewer.dataset.uid], this.draggingSeries);
-        console.log(this.currentLayout);
-
 
         targetViewer.images = images;
       }
@@ -843,6 +860,10 @@
       }
 
       _onDeactivateRenderer(event) {
+        // remove active from layout
+        console.log(event.target.dataset.uid);
+        console.log(this.active);
+        this.set(['currentLayout', this.active], -1);
         this.active = -1;
       }
 
@@ -898,20 +919,21 @@
       }
 
       _layoutSizeChanged(layout) {
-        if (layout === undefined) {
-          return;
-        }
-
-        console.log(layout);
-
         if (Number.isInteger(layout)) {
-          console.log(layout);
-          // add/remove entries in the current layout
-          let emptyLayout = [-1, -1, -1, -1];
-          let newLayout = [...this.currentLayout, ...emptyLayout];
-          this.currentLayout = newLayout.slice(0, layout + 1);
-        } else {
-          console.log('ok');
+          if (this.currentLayout.length > layout + 1) {
+            // cache what is being removed
+            for (let i = 0; i < this.currentLayout.length; i++) {
+              this.cacheLayout[i] = this.currentLayout[i];
+            }
+            // removing one element
+            this.currentLayout = this.currentLayout.slice(0, layout + 1);
+          } else {
+            //
+            const cache =
+              this.cacheLayout.slice(this.currentLayout.length, layout + 1);
+            // adding one element
+            this.currentLayout = [...this.currentLayout, ...cache];
+          }
         }
 
         // resize viewers
