--- a/src/gex-viewer.html
+++ b/src/gex-viewer.html
@@ -303,6 +303,7 @@
               color-lut="{{colorLut0}}"
               cursor="{{cursor}}"
               histogram="{{histogram0}}"
+              index-sync="{{indexSync}}"
               localizer="{{l0}}"
               localizer0="{{l1}}"
               localizer1="{{l2}}"
@@ -328,6 +329,7 @@
               color-lut="{{colorLut1}}"
               cursor="{{cursor}}"
               histogram="{{histogram1}}"
+              index-sync="{{indexSync}}"
               localizer="{{l1}}"
               localizer0="{{l0}}"
               localizer1="{{l2}}"
@@ -353,6 +355,7 @@
               color-lut="{{colorLut2}}"
               cursor="{{cursor}}"
               histogram="{{histogram2}}"
+              index-sync="{{indexSync}}"
               localizer="{{l2}}"
               localizer0="{{l0}}"
               localizer1="{{l1}}"
@@ -378,6 +381,7 @@
               color-lut="{{colorLut3}}"
               cursor="{{cursor}}"
               histogram="{{histogram3}}"
+              index-sync="{{indexSync}}"
               localizer="{{l3}}"
               localizer0="{{l0}}"
               localizer1="{{l1}}"
