--- a/src/elements/ami-viewer.html
+++ b/src/elements/ami-viewer.html
@@ -44,6 +44,7 @@
         justify-content: center;
         align-items: center;
         color: #ffffff;
+        overflow: hidden;
       }
 
       .renderer-container {
