--- a/src/elements/image-controls.html
+++ b/src/elements/image-controls.html
@@ -242,24 +242,24 @@
           series: [{
             name: 'Intensity distribution',
             data: [[0, 0], [1, 0], [2, 1], [3, 1], [4, 0], [5, 0]],
-          }, {
+            }, {
             name: 'Window Level',
             data: [[0, 0], [1, 0], [2, 1], [3, 1], [4, 0], [5, 0]],
+            },
+          ],
+          legend: {
+            itemStyle: {
+              fontSize: '10px',
+              color: '#E0E0E3',
+            },
+            itemHoverStyle: {
+              color: '#FFF',
+            },
+            itemHiddenStyle: {
+              color: '#606063',
+            },
           },
-        ],
-        legend: {
-          itemStyle: {
-            fontSize: '10px',
-            color: '#E0E0E3',
-          },
-          itemHoverStyle: {
-            color: '#FFF',
-          },
-          itemHiddenStyle: {
-            color: '#606063',
-          },
-      },
-      });
+        });
       }
 
       _histogramChanged() {
@@ -330,7 +330,8 @@
         this.$.chart.redraw();
       }
 
-      _activateChanged() {
+      _activateChanged(activate) {
+        console.log(activate);
         if (this.highchart && !this.activate) {
           if (!this.$.container.contains(this.$.chart)) {
             this.$.container.appendChild(this.$.chart);
